Fixed alignment issue with dribbble posts.

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -205,6 +205,7 @@ p.statement {
   width: 33.3%;
   margin-bottom: -3px;
   overflow: hidden;
+  height: 238px;
 }
 
 #portfolio section a {
@@ -212,12 +213,15 @@ p.statement {
   margin: 0;
   padding: 0;
   background: rgba(41, 179, 208, 1.0);
+  margin: -3px;
+  height: 238px;
 }
 
 #portfolio section a img {
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
   transition: all .5s ease;
+  height: 238px;
 }
 
 #portfolio section a img:hover {
